[project]
name = "encoder-decoder-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.5",
    "matplotlib>=3.10.9",
    "rouge-score>=0.1.2",
    "spacy>=3.8.14",
    "jupyterlab>=4.0",
    "torch>=2.3",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
